--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,10 @@
 name: Deploy website to GitHub Pages
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
 permissions:
   contents: write
 jobs:
