--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,6 @@
 name: Deploy website to GitHub Pages
 
-on:
-  push:
-    branches:
-      - main
-      - gh-pages
-
+on: [push]
 permissions:
   contents: write
 jobs:
